Status Report updates (#47)
